<resources>
    <string name="app_name">Fantasy Fitness</string>
    <string name="done">Done</string>
    <string name="exercise">Exercise</string>
    <string name="exercise_name">Exercise name</string>
    <string name="exercise_type">Exercise type</string>
    <string-array name="exercise_types">
        <item>Run</item>
        <item>Walk</item>
        <item>Weights</item>
        <item>Swim</item>
    </string-array>
    <string name="fantasy_fitness_logo">FantasyFitnessLogo</string>
    <string name="home">Home</string>
    <string name="log_exercise">Log Exercise</string>
    <string name="log_exercise_button">Log Exercise Button</string>
    <string name="login">Login</string>
    <string name="minutes">Minutes</string>
    <string name="password">Password</string>
    <string name="profile">Profile</string>
    <string name="seconds">Seconds</string>
    <string name="username">Username</string>
    <string name="welcome_default">Welcome to the App</string>
    <string name="welcome_to_the_app">Welcome to the App</string>
    <string name="welcome_user">Welcome, %1$s!</string>
    <string name="unknown_location">Unknown Location\n</string>
    <string name="enter_exercise_location">Enter Exercise Location</string>
    <string name="update_map_button_desc">Update map\n</string>
    <string name="take_profile_picture">Take Profile Picture</string>
    <string name="must_enable_camera">Camera permission denied. Cannot take profile picture</string>
    <string name="camera_please_grant_permission">The camera is needed for this feature. Please grant permission."</string>
    <string name="hello">"Hello: "</string>
    <string name="show_camera_preview">Show Camera Preview</string>
    <string name="take_picture">Take Picture</string>
    <string name="no_cameras_found">No camera found on this device</string>
    <string name="hide_camera_preview">Hide Camera Preview</string>
    <string name="camera_not_started">Camera not started</string>
    <string name="picture_saved">Picture saved!</string>
    <string name="profile_image">Profile Image</string>
    <string name="profile_fragment">ProfileFragment</string>
    <string name="error_camera">Error starting camera</string>
</resources>